# ai-disk-analyzer

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  STORAGE_MIGRATION.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
apps/desktop/frontend/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: analyze.rs  cloud_upload.rs  execute.rs  mod.rs  oauth.rs  open_in_file_manager.rs  permission.rs  plan.rs  scan.rs  storage.rs
apps/images/: generate_rounded_icon.py  rotate_icon.py
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: lib.rs  planner.rs  prompt.rs  validator.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  telemetry.rs
crates/disk-scanner/: Cargo.toml
crates/disk-scanner/src/: filters.rs  lib.rs  mft_scan.rs  node.rs  scanner.rs
crates/disk-scanner/tests/: mft_record0_diagnostic.rs  scan_timing.rs
crates/domain-model/: Cargo.toml
crates/domain-model/src/: action.rs  cleanup_plan.rs  file_tree.rs  lib.rs  risk.rs  scan_result.rs  top_file_entry.rs
crates/executor/: Cargo.toml
crates/executor/src/: delete.rs  dry_run.rs  lib.rs  move.rs  permission.rs
docs/: MFT_SCAN_OPTIMIZATION_ANALYSIS.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_SETUP.md  ui-spec.md
(+24 files in other folders)
